# drf-api-permissions-postgres

./: db.sqlite3  docker-compose.yml  pyproject.toml
snack_permissions_project/: settings.py  urls.py
